@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/fontconfig
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.113 2008/05/30 18:53:46 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.114 2008/06/01 19:48:01 loki_val Exp $
+
+*fontconfig-2.5.93-r1 (01 Jun 2008)
+
+  01 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +fontconfig-2.5.93-r1.ebuild:
+  Install fc-lang directory, needed to test font language coverage.
 
   30 May 2008; Alexis Ballier <aballier@gentoo.org>
   fontconfig-2.5.93.ebuild:
